--- a/pixelhub/package.json
+++ b/pixelhub/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "font-awesome": "^4.7.0",
     "postcss": "^8.4.30",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.16.5"
   }
 }
