--- a/pixelhub/package.json
+++ b/pixelhub/package.json
@@ -19,8 +19,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "canvas-confetti": "^1.6.1",
+    "dayjs": "^1.11.10",
     "flowbite-react": "^0.6.0",
     "heroicons": "^2.0.18",
+    "jwt-decode": "^3.1.2",
     "lottie-react": "^2.4.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
