--- a/pixelhub/package.json
+++ b/pixelhub/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "canvas-confetti": "^1.6.1",
     "dayjs": "^1.11.10",
+    "emoji-picker-react": "^4.5.7",
     "flowbite-react": "^0.6.0",
     "heroicons": "^2.0.18",
     "jwt-decode": "^3.1.2",
